--- a/css/styles.css
+++ b/css/styles.css
@@ -1,51 +1,174 @@
-.namecontainer{
-	background-color:red;
-	padding:5px;
-	text-align:center;
+body{
+	font-family: 'Roboto', sans-serif;
+}
+
+.userscoreposition{
+	padding-left:10px;
+	padding-top:10px;
+	font-size:9pt;
+}
+
+.userscorerow{
+	margin:auto;
+	width:400px;
+	height:40px;
+	font-size:14pt;
+	font-weight:500;
+	background-color:#f2f2f2;
+	border-bottom:1px solid white;
+	color: #333333;
+}
+
+.userscorename{
+	width:170px;
+	border-right:1px solid white;
+	padding-left:20px;
+	padding-top:5px;
+	
+}
+
+.userscorescore{
+	padding-left:20px;
+	padding-top:5px;
 }
 
 
-.onevsonecontainer{
 
+.nametitle{
+	text-align:center;
+	background-color: #f2f2f2;
+	height:50px;
+	font-weight:900;
+	font-size:15pt;
+	color:#333333;
+	padding-top:10px;
+	padding-left:70px;
 }
 
-
-.groupcontainer{
+.closename{
 	text-align:center;
-	border:1px solid #ddd;
-	margin-top:20px;
+	font-size:27pt;
+	margin-top:0px;
+	padding-top:0px;
+	color:#0066cc;
+}
+
+.closename :hover{
+	text-decoration:underline;
+	cursor:pointer;
 }
 
 .grouptitle{
-	padding:10px;
-	background-color:blue;
+	margin-top: 20px;
+	margin-left:auto;margin-right:auto;
+	text-align:center;
+	width:400px;
+	height:40px;
+	border-top:1px solid #d9d9d9;
+	border-right:1px solid #d9d9d9;
+	border-left:1px solid #d9d9d9;
+	font-weight:500;
+	padding-top:7px;
+	border-radius: 15px 15px 0px 0px; 
+	
 }
 
-.realresultscontainer{
+.groupheaders{
+	margin-left:auto;margin-right:auto;
+	width:400px;
+	font-size:7pt;
+	font-weight:900;
+	color:#999999;
+	height:25px;
 	text-align:center;
 }
-
-.predictionresultscontainer{
-	text-align:center;
+	
+.standingsheader{
+	width:200px;
+	background-color:#f2f2f2;
+	border-right:1px solid white;
+	border-left:1px solid #d9d9d9;
+	padding-top:6px;
+}
+	
+.picksheader{
+	width:200px;
+	background-color:#f2f2f2;
+	border-right:1px solid #d9d9d9;
+	padding-top:6px;
+}
+	
+.tablerow{
+	margin-left:auto;margin-right:auto;
+	height:35px;
+	width:400px;
 }
 
+.level0{border-bottom:1px solid #cccccc;}
+.level1{border-bottom:3px solid #cccccc;}
+.level2{border-bottom:1px solid #cccccc;}
+.level3{border-bottom:1px solid #cccccc;}
 
-.cflag{
-	text-align:right;
-	padding-right:5px;
+.rowflag{
+	text-align: right;
+	padding-right: 6px;
+	padding-top: 3px;
 }
 
-.cflag img{
-	height:30px;
+.rowflag img{
+	height:25px;
 }
-
-
-.cname{
-}
-
-
-.cpts{
+	
+.rowaka{
+	padding-top:4px;
 	text-align:left;
+	padding-left:12px;
+	font-size:13pt;
+}
+	
+.rowstandingspts{
+	border-right: 1px solid #f2f2f2;
+	padding-left:5px;
+	padding-top: 4px;
+}
+	
+.rowuserpts{
+	padding-top:7px;
+	font-size:9pt;
+	font-weight:500;
+	border-right:1px solid #d9d9d9;
 }
 
+.rowgrouppoints{
+	margin-left:auto;margin-right:auto;
+	width:400px;
+	background-color: #d9d9d9;
+	height:30px;
+	font-weight:900;
+	text-align:right;
+	padding-right:25px;
+	padding-top: 2px;
+	border-radius: 0px 0px 15px 15px; 
+}
+
+.bullseye{background-color:#b3ffb3;}
+
+.indirecthit{background-color:#ffffcc;}	
+
+.tinybullseye{background-color: #e6ffe6;}
+
+.totalmiss img{opacity: 0.5;}
+.totalmiss {opacity: 0.5;}
+
+.rowusertotalpoints{
+	width:100%;
+	text-align:right;
+	padding-right:100px;
+	font-size:16pt;
+	font-weight:900;
+	height:50px;
+	margin-top:20px;
+	background-color:#e6f2ff;
+	padding-top:10px;
+}
 
